<resources>
    <string name="app_name">EnVivoApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="facebook_app_id">969563257161369</string>
    <string name="fb_login_protocol_scheme">fb969563257161369</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lista_streamig">listaStreamig</string>
    <string name="title_activity_streeming">Streeming</string>
    <string name="title_activity_data_vendedor">DataVendedor</string>
    <string name="title_activity_data_local">DataLocal</string>
    <string name="title_activity_gestion_videos">GestionVideos</string>
    <string name="title_activity_data_cliente">DataCliente</string>
    <string name="title_activity_listar_vendedores">ListarVendedores</string>
    <string name="title_activity_home_cliente_main">HomeClienteMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="data_cliente">Perfil</string>
    <string name="home_cliente">Home</string>
    <string name="lista_vendedores">Vendedores</string>
    <string name="mensajeria_global_cliente">Mensajeria</string>
    <string name="pedidos_cliente">Pedidos</string>
    <string name="salir">Salir</string>

    <string name="listar_clientes">Clientes</string>
    <string name="local">Local</string>
    <string name="videos">videos</string>





</resources>