<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/home_vendedor"
        android:icon="@drawable/ic_home"
        android:title="@string/home_cliente" />
<item android:title="opciones">
    <menu>


        <item
            android:id="@+id/data_vendedor"
            android:icon="@drawable/ic_persona"
            android:title="@string/data_cliente" />

        <item
            android:id="@+id/local"
            android:icon="@drawable/ic_local_vendedor"
            android:title="@string/local" />

        <item
            android:id="@+id/videos"
            android:icon="@drawable/ic_videos_streaming"
            android:title="@string/videos" />

        <item
            android:id="@+id/pedido_vendedor"
            android:icon="@drawable/ic_carrito_compra"
            android:title="@string/pedidos_cliente" />

        <item
            android:id="@+id/mensajeria_global_vendedor"
            android:icon="@drawable/ic_enviar_mensajes"
            android:title="@string/mensajeria_global_cliente" />

        <item
            android:id="@+id/listar_clientes_vendedor"
            android:icon="@drawable/ic_clientes"
            android:title="@string/listar_clientes" />

        <item
            android:id="@+id/ver_calificaciones_vendedor"
            android:icon="@drawable/ic_baseline_thumb_up_alt_24"
            android:title="Calificaciones" />

        <item
            android:id="@+id/ver_comentarios_vendedor"
            android:icon="@drawable/com_facebook_button_send_icon_white"
            android:title="Comentarios" />

        <item
            android:id="@+id/reporte"
            android:icon="@drawable/ic_reportes_vendedor"
            android:title="Reporte" />

        <item
            android:id="@+id/ayuda_vendedor"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="Ayuda" />

    </menu>
</item>

        <item
            android:id="@+id/Productos"
            android:title="Productos"
            >
            <menu>
                <item
                    android:id="@+id/ListarProductos"
                    android:icon="@drawable/ic_listar_vendedores"
                    android:title="Ver productos"/>
                <item
                    android:id="@+id/ListarProductosSinImagen"
                    android:icon="@drawable/ic_listar_vendedores"
                    android:title="Ver productos sin imagen"/>
                <item
                    android:id="@+id/CrearProductoIndividual"
                    android:icon="@android:drawable/ic_input_add"
                    android:title="Crear producto individualmente"/>

                <item
                    android:id="@+id/CargarProductoCsv"
                    android:icon="@drawable/ic_archivo"
                    android:title="Cargar productos con CSV"/>
            </menu>
        </item>





        <item
            android:id="@+id/salir_vendedor"
            android:icon="@drawable/ic_persona_salir"
            android:title="@string/salir" />


</menu>